<resources>
    <string name="app_name">DeMeMo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_add_goal">Add new verse</string>
    <string name="str_add">Add</string>
    <string name="aux_memory_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nulla at nibh ac erat sagittis rutrum. Vivamus id facilisis lorem, vitae varius turpis.
        Pellentesque ipsum sapien, bibendum viverra tortor in, malesuada suscipit arcu.
        Nunc magna erat, egestas ut suscipit ac, euismod pulvinar mi.
        Aenean vitae sodales enim. Duis quis ultricies purus. In at bibendum lectus, et lacinia eros.
        Cras lectus tellus, consequat eget sapien ac, porttitor luctus massa.
        Vestibulum dignissim magna at tortor finibus tempor.
        Donec efficitur augue eros, nec placerat nunc iaculis at.
        Mauris pulvinar blandit aliquet. Quisque eu ligula justo.
        Curabitur sagittis velit, ut facilisis purus hendrerit eu.
        Sed cursus mauris eget orci rhoncus, at feugiat magna ullamcorper. </string>
    <string name="example_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nulla at nibh ac erat sagittis rutrum. Vivamus id facilisis lorem, vitae varius turpis.
        Pellentesque ipsum sapien, bibendum viverra tortor in, malesuada suscipit arcu.
        Nunc magna erat, egestas ut suscipit ac, euismod pulvinar mi. </string>
    <string name="img_description">Img</string>
    <string name="img_add_button">Img Add Button</string>
    <string name="loading">Loading…</string>
    <string name="tile">Quote</string>
    <string name="verse">Verse</string>
    <string name="dialog_save">Just save</string>
    <string name="dialog_save_start">Save and start</string>
    <string name="failed_saving">Something bad happened, verse without saving!</string>
    <string name="required_field">Required field!</string>
    <string name="saved">Saved successfully! </string>
    <string name="successfully_deleted">Successfully removed!</string>
    <string name="cloud_successfully_deleted">Cloud: successfully removed!</string>
    <string name="failed_removing">Something bad happened, cloud verse was not removed, check your network connection</string>
    <string name="account_successfully_deleted">User account deleted!</string>
    <string name="exit">Please press BACK again to EXIT</string>
    <string name="failed_creating_user">Something bad happened, user not created</string>
    <string name="failed_saving_user">Er, user not saved</string>
    <string name="failed_loading_user_data">Error,  user data was not loaded!</string>
    <string name="failed_loading_your_version_data">Something bad happened, data do not loaded</string>
    <string name="fam_title">Control Audio Menu</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="play">play</string>
    <string name="empty" />
    <string name="empty_word">empty</string>
    <string name="not_found">Not found</string>
    <string name="hide_fam">Press again for hide Control Audio Menu</string>
    <string name="hide_status_text_size_bar">Press again for hide the Text Size Status Bar</string>
    <string name="dismiss">Dismiss</string>
    <string name="msg_long_click_option">What would you like to do?</string>
    <string name="dialog_message_description">Put a message here</string>
    <string name="test_stop">The exam has been dismissed!</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="empty_list">Empty list!</string>
    <string name="empty_list_please_add">… please add new verse.</string>
    <string name="title_exists">This title already exists! Overwrite?</string>
    <string name="title_and_verse_exists">This title and verse already exists! Overwrite?</string>
    <string name="verse_exists">These verses already exist! Overwrite?</string>
    <string name="delete_confirmation_msg">You are about to delete your account. Are you sure?</string>
    <string name="ok">OK</string>
    <string name="agree">Agree</string>
    <string name="title">Title</string>
    <string name="description_menu_icon">Menu icon</string>
    <string name="description_icon_right_arrow">Icon right arrow</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="email_low_case">e-mail</string>
    <string name="mobile_number_user_info">Mobile</string>
    <string name="pass">Password</string>
    <string name="already_a_member_login">Already a member?</string>
    <string name="unfilled_field">Unfilled field</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="create_account">Create account</string>
    <string name="pass_again">Re-enter Password</string>
    <string name="login">Login</string>
    <string name="login_needed">Login or Sign Up first!</string>
    <string name="no_account_yet_create_one">No account yet?</string>
    <string name="crete_one"><u>Create one</u></string>
    <string name="restore"><u>Restore</u></string>
    <string name="login_failed">Login failed</string>
    <string name="error_name">at least 3 characters</string>
    <string name="error_email">enter a valid email address</string>
    <string name="error_pass">between 4 and 10 alphanumeric characters</string>
    <string name="error_old_pass">do not match with old password</string>
    <string name="error_re_pass">password do not match</string>
    <string name="error_mobile">enter a valid mobile number</string>
    <string name="same_pass">enter new password</string>
    <string name="welcome">Welcome</string>
    <string name="successfully_user_created">. Account created!</string>
    <string name="user_collision">The email address is already in use by another account.</string>
    <string name="data_collision">Data collision.</string>
    <string name="invalid_user">There is no user record corresponding to this identifier</string>
    <string name="select_img">Select image</string>
    <string name="failed_picking_img">Failed choosing image!</string>
    <string name="use">Use</string>
    <string name="use_question">Do you want to use image?</string>
    <string name="network_error">Network error! Please check your internet connection</string>
    <string name="used_email">E-mail address is already in use</string>
    <string name="invalid_credentials">Invalid credentials, rectify user or password</string>
    <string name="too_many_requests">Too many unsuccessful login attempts. Please try again later.</string>
    <string name="skip">Skip</string>
    <string name="todo">TODO</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started!</string>
    <string name="section">Section</string>
    <string name="got_it">Got it</string>
    <string name="animated_img">Animated image</string>
    <string name="split_msg_dialog">Dividing the text in sections will help you to memorize more quickly.</string>
    <string name="go_here">You can do it in the top bar.</string>
    <string name="right_arrow">Right arrow</string>
    <string name="left_arrow">Left arrow</string>
    <string name="section_image">section image</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="email_is_not_verified">press here to verify email</string>
    <string name="email_is_not_verified_msg">Please verify email first</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="new_name">New name</string>
    <string name="new_email">New e-mail</string>
    <string name="new_mobile">New mobile number</string>
    <string name="send">Send!</string>
    <string name="dialog_message_verification_email">A verification link will be sent to this email:</string>
    <string name="dialog_message_restore_email_was_sent">A restore link was sent to this email:</string>
    <string name="dialog_message_restore_email">A restore link will be sent to this email:</string>
    <string name="test_email">elioworkemail@gmail.com</string>
    <string name="email_sent">E-mail sent!</string>
    <string name="failed_updating">Failed updating data</string>
    <string name="failed_updating_pass">Failed updating password</string>
    <string name="data_updated">Data updated successfully!</string>
    <string name="remove_account">Remove</string>
    <string name="change">Change</string>
    <string name="info_icon">Info icon</string>
    <string name="daily_notification">Daily notification</string>
    <string name="weekly_notification">Weekly notification</string>
    <string name="monthly_notification">Monthly notification</string>
    <string name="notification_setup">Notification Setup</string>
    <string name="date_and_time_symbol">Date and time symbol</string>
    <string name="please_calendar_grant_permissions">Please grant needed permissions</string>
    <string name="remainder_msg">Reminder</string>
    <string name="ready_msg">Ready to memorize: </string>
    <string name="calender_ids">Calendar</string>
    <string name="calendar_ops">"Calendar selector"</string>
    <string name="channel_description">"Channel for "</string>
    <string name="selected">selected</string>
    <string name="end_date">End date</string>
    <string name="pick_until_date_first">Please pick a end date first</string>
    <string name="language_not_supported">Sorry, your current language is not supported</string>
    <string name="copy">Copy</string>
    <string name="text">text</string>
    <string name="invalid_until_date">The end date it is invalid!</string>
    <string name="verses">Verses</string>
    <string name="frequency">Frequency</string>
    <string name="last_upload">Last upload</string>
    <string name="zero">0</string>
    <string name="empty_date">waiting</string>
    <string name="upload_success">Uploading success!</string>
    <string name="failed_uploading">Failed uploading, try later!</string>
    <string name="failed_deleting">Failed removing account, try later!</string>
    <string name="refresh_icon">refresh icon</string>
    <string name="upload">Upload</string>
    <string name="general_settings">General Settings</string>
    <string name="upload_needed">Upload needed</string>
    <string name="changes_to_be_uploaded">Upload alert: New data to be uploaded!</string>
    <string name="changes_to_be_downloaded">Synchronization alert: Data to be downloaded!</string>
    <string name="search">search…</string>
    <string name="leader_board">Leader Board</string>
    <string name="icon_leader_board">Icon leader board</string>
    <string name="user">User name</string>
    <string name="evaluate">Evaluate</string>
    <string name="check_button">Check button</string>
    <string name="ic_black_shield">ic black shield</string>
    <string name="sync">Sync</string>
    <string name="sync_not_needed">Synchronization don\'t needed!</string>
    <string name="upload_not_needed">Upload don\'t needed!</string>
    <string name="language">Language</string>
    <string name="bible_language">Language: </string>
    <string name="language_selector">Language selector</string>
    <string name="bibleRoot">Bible</string>
    <string name="icon">Icon</string>
    <string name="hits">Hits</string>
    <string name="almost_hit">Almost</string>
    <string name="miss">Miss</string>
    <string name="fields">Fields</string>
    <string name="blank">---</string>
    <string name="writer_evaluator">Writer - Evaluator</string>
    <string name="amount">Amount</string>
    <string name="don_t_show_again">Don\'t show again</string>
    <string name="forgot_password">Forgot password?</string>
</resources>