<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Theme.MaterialComponents.Dialog"
    android:background="@drawable/background_gray"
    android:padding="10dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_anim"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:contentDescription="@string/animated_img"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/tv_msg_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/lottie_anim"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/dialog_message_description"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/dark_gray_btn_bg_color"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/lineal_l_go_here_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/tv_msg_dialog"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_msg_go_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/go_here"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@color/dark_gray_btn_bg_color"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="1dp"
            android:src="@drawable/ic_arrow_right"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/right_arrow" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/ic_menu_black"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/section_image" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineal_l_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/lineal_l_go_here_container"
        android:orientation="horizontal"
        android:weightSum="1">

    <Button
        android:id="@+id/btn_dialog"
        style="@style/ok_button"
        android:layout_marginTop="@dimen/regular_window_margin"
        android:layout_margin="@dimen/regular_item_padding"
        android:layout_weight="1"
        android:background="@drawable/selector_edit_button"
        android:text="@string/got_it"
        android:layout_width="0dp" />
    </LinearLayout>

</RelativeLayout>